Update categorical-attributes-step component.

--- a/src/app/src/app/dashboard/components/categorical-attributes-step/categorical-attributes-step.component.html
+++ b/src/app/src/app/dashboard/components/categorical-attributes-step/categorical-attributes-step.component.html
@@ -38,3 +38,7 @@
   </tr>
   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="categories-detail-row"></tr>
 </table>
+<div class="buttons d-flex justify-content-between">
+  <button class="btn btn-secondary" routerLink="/dashboard/edit-dataset/number-attributes" routerLinkActive="active">Geri</button>
+  <button class="btn btn-primary" routerLink="/dashboard/edit-dataset/data-rows" routerLinkActive="active">İleri</button>
+</div>
