Update number-attributes-step component.

--- a/src/app/src/app/dashboard/components/number-attributes-step/number-attributes-step.component.html
+++ b/src/app/src/app/dashboard/components/number-attributes-step/number-attributes-step.component.html
@@ -26,3 +26,6 @@
   <tr mat-header-row *matHeaderRowDef="['name','min','max','mean','distinct','missing']"></tr>
   <tr mat-row *matRowDef="let row; columns: ['name','min','max','mean','distinct','missing'];"></tr>
 </table>
+<div class="buttons d-flex justify-content-between">
+  <button class="btn btn-primary" routerLink="/dashboard/edit-dataset/categorical-attributes">İleri</button>
+</div>
